# s30plus-music-sync

./: README.md  pyproject.toml
docs/: MyMusic.lst  Nice times.lst  Workspace.hexproj  listinfo.data  listinfo.hexpat  playlist.hexpat
nokia_sync_music/: __about__.py  __init__.py  __main__.py  nokia_music.py  ytsync.py
tests/: __init__.py
